Fix date input overflow on mobile, hide number spinners

--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,13 @@
     opacity: 0.5;
     cursor: pointer;
   }
+  /* Hide number spinners */
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
 }
